# youtube-sommelier

./: .gitignore  README.md  pyproject.toml  youtube_summarize.ipynb  youtube_video.yaml
src/youtube_sommelier/: crew.py  main.py
src/youtube_sommelier/config/: agents.yaml  tasks.yaml
src/youtube_sommelier/tools/: youtube.py
youtube/: chroma.sqlite3
